--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
   h1 {
       color: black;
       text-align: left;
-      font-family: 'Lato', sans-serif;
+      font-family: 'Open Sans', sans-serif;
+      font-weight:300;
       font-size: 50px;
       margin-bottom:0px;
   }
