--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
 
   .content {
     flex: 1 0 auto;
+    text-align: right;
   }
 
   .district {
@@ -61,33 +62,48 @@
       font-size: 20px; 
   }
 
-  button {
-      display: block;
-      margin: 0 auto;
-      background-color: #00fdcb;
-      border-style: solid;
-      border: none;
-      border-radius: 5px;
-      padding: 10px;
-      text-align: left;
-      font-family: 'Open Sans', sans-serif;
-      font-weight: 300;
-
+  ul {
+    margin: auto;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: right;
+    padding: 0;     
+    max-width: 600px;
+    float: right;
+  }
+  
+  @media screen and (min-width: 600px) {
+      ul {
+          flex-direction: row;
+      }
+  }
+  
+  li { 
+    position: relative; 
+    padding: 10px 0;
+  }
+  
+  a {
+    color: black;
+    text-transform: uppercase;
+    text-decoration: none;
+    display: inline-block;
+    padding: 15px 20px;
+    position: relative;
+    box-shadow: inset 0 -2px 0 rgba(187, 0, 255, 0.5), 0 2px 0 rgba(187, 0, 255, 0.5);
+    transition: box-shadow .3s;
+    color: inherit;
+    overflow: hidden;
+  }
+  
+  u {
+    text-decoration-color:rgba(187, 0, 255, 0.5);
+    text-decoration-thickness: 15%;
   }
 
-  .inp {
-      border-radius: 5px;
-      background-color: #6417ff;
-      border-style: solid;
-      border: none;
-      height: 20px;
-      margin-top: 10px;
-      color: whitesmoke;
-  }
-
-  .inner {
-      padding: 10px;
-      background-color: #7a46e1;
-      margin-top: 10px;
-      margin-bottom: 10px;
+  
+  a:hover {
+    box-shadow: inset 0 -50px 0 rgba(187, 0, 255, 0.5), 0 2px 0 rgba(187, 0, 255, 0.5);
   }
