--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
       text-align: center;
       font-family: 'Open Sans', sans-serif;
       font-weight: 500;
-      font-size: 80px;
+      font-size: 12vmin;
       line-height:0.9;
   }
 
@@ -63,6 +63,7 @@
   }
 
   .contents {
+    margin-top: 30px;
     top: 50%;
     left: 50%;
     position:fixed;
@@ -83,8 +84,8 @@
 
   .welcome-text {
       margin: 5px;
-      font-size: 20px; 
-      margin-top:20px;
+      font-size: 3vmin; 
+      margin-top:15px;
   }
 
   p {
